Adicionar autenticação Bearer ingênua ao Microblog
