# microblog/servico/app/Http/Controllers/PublicacaoController.php
@@ -14,10 +14,19 @@ class PublicacaoController extends Controller
 
 
     public function store(Request $request) {
+        $token = $request->bearerToken();
+        if (empty($token)) {
+            return response()->json([
+                'tipo' => 'erro',
+                'conteudo' => 'Não autorizado'
+            ], 401);
+        }
+        
         $request->validate([
             'autor' => 'required',
             'texto' => 'required|max:144',
         ]);
+
         Publicacao::create($request->all());
         
         return response()->json(
